implement shipment methid
